--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
+    "classnames": "^2.5.1",
+    "immer": "^10.1.1",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-notion": "^0.10.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-virtualized": "^9.22.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
